# XenVulkan

./: .gitignore  CMakeLists.txt  CompileShaders.sh  compile_shaders.json  compile_shaders.py  vcpkg.json
Code/Common/: Filesystem.cpp  Filesystem.hpp  Panic.inl  Types.hpp
Code/Tools/xFX/: CMakeLists.txt  Fx.cpp  Fx.hpp
Code/XenEngine/: CMakeLists.txt  ShaderManager.cpp  ShaderManager.hpp  Window.cpp  Window.hpp  XenEngine.cpp  XenEngine.hpp  test2_main.cpp  test_main.cpp
Code/XenEngine/Vulkan/: VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanStruct.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
Engine/Shaders/: ExampleCompute.xfx  Unlit.frag  Unlit.vert  Unlit.xfx
Tools/VendorLicenses/: nlohmann_json.txt
